# plane

./: CMakeCache.txt  CMakeLists.txt  Makefile  TODO  cachegrind.out.23037  cmake_install.cmake  compile_commands.json
assets/: Sprite-0001.aseprite  [A  level1.dml  test.dml  test.ecl  test.out
src/: CMakeLists.txt  Makefile  cmake_install.cmake  config.h  enemy.h  main.cc  multishot.h  patterns.cc  patterns.h  planes  planes.cc  planes.h  player.h  projectile.h  queue.cc  queue.h  spline.cc  spline.h  stage1.cc  stage1.h  tasking.cc  tasking.h  vector_calc.cc  vector_calc.h
src/common/: config.h  display.h  queue.h  spline.cc  spline.h  vector_calc.h
src/planes1/: enemy.h  planes.cc  planes.h  player.h  projectile.h  spline.h  stage.cc  stage.h  stage1.cc  stage1.h  tasking.h
src/planes2/: bullets.cc  bullets.h  collision.cc  collision.h  enemy.cc  enemy.h  enm.cc  enm.h  ent.h  input.cc  input.h  main.cc  move.cc  move.h  plane.cc  plane.h  player.h  projectile.cc  projectile.h  sprite.h  stage.h  stage1.cc  stage1.h  texture.cc  texture.h  timeline.h  virt_screen.h
src/planes2/dml/: coroutine.h  dml.cc  dml.h  enm_data.h  enm_manager.h  scheduler.cc  scheduler.h  task.cc  task.h
src/planes2/stage1/: enemies.cc  enemies.h  stage1.cc  stage1.h  timeline.h
src/planes2/stage2/: enemies.h
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  collision_test  collision_test.cc  queue_bench  queue_benchmark.cc  queue_test  queue_test.cc  vector_test  vector_test.cc
