add_executable(${PROJECT_NAME} 
  common/queue.h
  common/vector_calc.h
  common/vector_calc.cc
  common/spline.h
  common/spline.cc
  planes2/bullets.h
  planes2/bullets.cc
  planes2/collision.cc
  planes2/collision.h
  planes2/enm.cc
  planes2/enm.h
  planes2/enemy.cc
  planes2/enemy.h
  planes2/input.cc
  planes2/input.h
  planes2/main.cc
  planes2/plane.cc
  planes2/plane.h
  planes2/projectile.cc
  planes2/projectile.h
  planes2/texture.h
  planes2/texture.cc
  planes2/timeline.h
  planes2/move.h
  planes2/move.cc
  planes2/stage1/stage1.h
  planes2/stage1/stage1.cc
  planes2/stage1/enemies.cc
  planes2/stage1/enemies.h
  )
